--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "antd": "^5.21.0",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "metismenujs": "^1.4.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "simplebar-react": "^3.2.6",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
