--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.21.0",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "framer-motion": "^11.11.0",
     "lucide-react": "^0.446.0",
     "metismenujs": "^1.4.0",
     "react": "^18.3.1",
